# Battleship

./: .gitignore  Asio.cpp  AsioServer.cpp  Battleship.cpp  CMakeLists.txt  CMakePresets.json  DXApp.cpp  DXApp.h  DXMain.cpp  Main.cpp  Point.cpp  Point.h  WinMacros.h  conanfile.txt  vcpkg.json
Math/: Point.h  Rect.h
Players/: BattleShip.cpp  BattleShip.h  NetPlayer.cpp  NetPlayer.h  PcPlayer.cpp  PcPlayer.h  Player.cpp  Player.h
Screen/: Base.cpp  Base.h  BattleApp.cpp  BattleApp.h  Menu.cpp  Menu.h  Screen.h  ScreenOverlay.h
Screen/Base/: Button.cpp  Button.h  TextBox.cpp  TextBox.h  TextEditable.cpp  TextEditable.h
Screen/Battle/: BattleScreen.cpp  BattleScreen.h  SelectScreen.cpp  SelectScreen.h
Screen/Battle/Grids/: BattleGrid.cpp  BattleGrid.h  BeginGrid.cpp  BeginGrid.h  Grid.cpp  Grid.h
Screen/Net/: ListServer.cpp  ListServer.h  MakeServer.cpp  MakeServer.h
Testing/: Point.cpp
Visual/: Base.cpp  Base.h  BattleGrid.cpp  BattleGrid.h  BeginGrid.cpp  BeginGrid.h  Grid.cpp  Grid.h
Widget/: Base.cpp  Base.h  Menu.cpp  Menu.h  Widget.h  WidgetOverlay.h
Widget/Base/: Builder.h  Button.cpp  Button.h  Empty.h  List.h  Overlay.h  Padder.h  Selecter.h  Stack.h  Switch.h  TextBox.cpp  TextBox.h  TextEditable.cpp  Widget.h  WidgetPtr.h
Widget/Battle/: BattleWidget.cpp  BattleWidget.h  RulesForPc.h  RulesSelect.h  SelectWidget.cpp  SelectWidget.h
Widget/Battle/Grids/: BattleGrid.cpp  BattleGrid.h  BeginGrid.cpp  BeginGrid.h  Grid.cpp  Grid.h  OpponentGrid.cpp  OpponentGrid.h  PlayerGrid.cpp  PlayerGrid.h
Widget/Net/: ListServer.cpp  ListServer.h  MakeServer.cpp  MakeServer.h  ServerConnections.cpp  ServerConnections.h  ServerList.cpp  ServerList.h  ServerNode.cpp  ServerNode.h
